
0.9.7a Nov 03, 2003
 * added check for presence of pkg in trans before adding upgrade (during --install)
 * added check for presence of pkg in trans before adding remove (during --remove)
 * added example linuxpackages.net source lines for each slack version

0.9.7 Nov 03, 2003
 * parse package require/dep from PACKAGES.TXT
 * show parsed require/dep data with --show
 * --list now shows pkg_name - pkg_vesion : pkg_description
 * get_newest_pkg now only takes 2 arguments, struct pkg_list and char pkg_name
 * resolves dependencies (recursively) and adds them to the transaction
   using lookup_pkg_dependencies and parse_dep_entry functions
 * make pkg now gzip's the manpage and strips the binary (thanks Jim)
 * added search_transaction function
 * exit on unknown command line switch instead of barking usage info
   and going on
 * added is_required_by function, so --remove pkg also prompts to remove
   packages (recursively) that require it
 * added get_exact_pkg function
 * EXCLUDE in slapt-getrc now supports POSIX and extended regex
   (see example.slapt-getrc or README/FAQ)
 * is_excluded() now takes a pkg_info_t type instead of char pkg name
 * updated documentation
 * added gettext support for easy translation/i18n support
 * --list, --show, and --search output now reports on installed status of pkg
 * dep failure causes package to go into exclude for current transaction
 * added faq concerning proxies
 * added check for installed pkgs when there is no dep conditional
 * added --no-dep to ignore dep check failures
 * bug fixes in dep code, logic updates

0.9.6g Oct 22, 2003
 * updated --help output
 * --interactive now applies to --install as well
 * added "static" make target, hopefully static linked slapt-get works with Slack8.1

0.9.6f Oct 20, 2003
 * download notification now prints out the version and pkg size
 * removed debugging print for dist-upgrade
 * do no unlink bad files (files that failed md5 checksum)
 * added source url to download notice
