@@ -17,12 +17,18 @@
  */
 
 #define USE_CURL_PROGRESS 0
-
+struct head_request_t {
+	char *data;
+	size_t size;
+};
+                                                                                                                             
 /* FUNCTION DEFINITIONS */
 
 /* this is the main download routine */
 int download_data(FILE *,const char *);
 
+/* this performs a head request */
+int head_request(const char *,const char *);
 /*
 	this fills FILE with data from url, used for PACKAGES.TXT and CHECKSUMS
 */
@@ -31,5 +37,8 @@ int get_mirror_data_from_source(FILE *,const char *,const char *);
 /* download pkg, cals download_data */
 char *download_pkg(const rc_config *,pkg_info_t *);
 
-/* callback for curl progress  */
+/* callback for curl progress */
 int progress_callback(void *,double,double,double,double);
+/* callback for head request */
+size_t head_request_data_callback(void *,size_t,size_t,void *);
+
